--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
 
         <section id="contact">
-            <h2>Get In Touch</h2>
+            <h2>Contacts</h2>
             <p>I'm currently open to new opportunities. Feel free to reach out!</p>
             <a href="mailto:simonecervini99+web@gmail.com" class="cta-button">Email Me</a>
         </section>
