CV added, better mobile view

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <script src="js/script.js"></script>
 </head>
 <body>
 
@@ -17,7 +18,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Contacts</a></li>
                 <li><a href="https://github.com/Cervini" target="_blank">GitHub</a></li>
             </ul>
         </nav>
@@ -35,6 +36,8 @@
         <section id="about">
             <h2>About Me</h2>
             <p>I'm a recent graduate in Computer Science Engineering with a passion for building software solutions. My experience ranges from developing web applications with <strong>Python, C, Java, JavaScript, and React</strong>, to hardware design with <strong>VHDL on FPGAs</strong>. I am a quick learner, and I'm always eager to tackle new challenges and technologies.</p>
+            <a href="assets/CV - ITA.pdf" class="cta-button">CV - Italian</a>
+            <a href="assets/CV - ENG.pdf" class="cta-button">CV - English</a>
         </section>
 
         <section id="projects">
