Added WIP project

--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
                     <p>A university project that replicates the core functionality of the popular virtual tabletop, Owlbear Rodeo. This application allows users to upload maps and tokens, and interact with them in real-time, providing a simple yet powerful tool for online TTRPG sessions.</p>
                     <a href="https://github.com/Cervini/vtt" class="project-link">View on GitHub</a>
                 </div>
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <div class="project-title-container">
+                        <img src="assets/d20.png" alt="REInventory" class="project-logo">
+                        <h3>REInventory <span class="status-wip">WIP</span> [JavaScript | React]</h3>
+                    </div>
+                    <p>A real-time, shared inventory manager for Dungeons & Dragons, allowing Dungeon Masters to visually track player items on a drag-and-drop grid inspired by classic video games.</p>
+                    <a href="https://github.com/Cervini/REInventory" class="project-link">View on GitHub</a>
+                </div>
             </div>
         </section>
 
