--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Simone Cervini. All rights reserved.</p>
+        <p>&copy; 2025 Simone Cervini</p>
     </footer>
 
 </body>
